--- a/testing.ipynb
+++ b/testing.ipynb
@@ -218,6 +218,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_path = './'\n",
+    "with open(os.path.join(exp_path, 'loss_logs.txt'), 'a') as logs_file:\n",
+    "    logs_file.write('epoch {} iteration{}, G Loss: {}, D Loss: {}\\n'.format(3, 1, 2, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
